--- a/index.html
+++ b/index.html
@@ -130,36 +130,36 @@
 
         <div id="current-center">
             <artile class="current-item">
-                <a href="img/projecat/decoration_1.jpg">
-                    <img src="img/projecat/decoration_1_.jpg" alt="current"></a>
+                <a href="img/projecat/Dekoracija_16_.jpg">
+                    <img src="img/projecat/Dekoracija_16_.jpg" alt="current"></a>
             </artile>
             <artile class="current-item">
-                <a href="img/projecat/decoration_2.jpg">
-                    <img src="img/projecat/decoration_2_.jpg" alt="current"></a>
+                <a href="img/projecat/Dekoracija_17_.jpg">
+                    <img src="img/projecat/Dekoracija_17_.jpg" alt="current"></a>
             </artile>
             <artile class="current-item">
-                <a href="img/projecat/decoration_9.jpg">
-                    <img src="img/projecat/decoration_9_.jpg" alt="current"></a>
+                <a href="img/projecat/Dekoracija_18_.jpg">
+                    <img src="img/projecat/Dekoracija_18_.jpg" alt="current"></a>
             </artile>
             <artile class="current-item">
-                <a href="img/projecat/decoration_10.jpg">
-                    <img src="img/projecat/decoration_10_.jpg" alt="current"></a>
+                <a href="img/projecat/Dekoracija_19_.jpg">
+                    <img src="img/projecat/Dekoracija_19_.jpg" alt="current"></a>
             </artile>
             <artile class="current-item">
-                <a href="img/projecat/decoration_4.jpg">
-                    <img src="img/projecat/decoration_4_.jpg" alt="current"></a>
+                <a href="img/projecat/Dekoracija_20_.jpg">
+                    <img src="img/projecat/Dekoracija_20_.jpg" alt="current"></a>
             </artile>
             <artile class="current-item">
-                <a href="img/projecat/decoration_6.jpg">
-                    <img src="img/projecat/decoration_6_.jpg" alt="current"></a>
+                <a href="img/projecat/Dekoracija_21_.jpg">
+                    <img src="img/projecat/Dekoracija_21_.jpg" alt="current"></a>
             </artile>
             <artile class="current-item">
-                <a href="img/projecat/decoration_7.jpg">
-                    <img src="img/projecat/decoration_7_.jpg" alt="current"></a>
+                <a href="img/projecat/Dekoracija_22_.jpg">
+                    <img src="img/projecat/Dekoracija_22_.jpg" alt="current"></a>
             </artile>
             <artile class="current-item">
-                <a href="img/projecat/decoration_8.jpg">
-                    <img src="img/projecat/decoration_8_.jpg" alt="current"></a>
+                <a href="img/projecat/Dekoracija_23_.jpg">
+                    <img src="img/projecat/Dekoracija_23_.jpg" alt="current"></a>
             </artile>
 
         </div>
@@ -204,7 +204,7 @@
         </div>
         <div id="team-center">
             <article class="team-member">
-                <img src="img/kupci/kupac_1_.jpg" alt="img">
+                <img src="img/kupci/person_1.jpg" alt="img">
                 <h2>Petar Zivic</h2>
                 <h5>Inzenjer</h5>
                 <p>Sve pohvale za Vas rad i kreativnost!</p>
@@ -213,7 +213,7 @@
                 </div>
             </article>
             <article class="team-member">
-                <img src="img/kupci/kupac_1_.jpg" alt="img">
+                <img src="img/kupci/persona_1.jpg" alt="img">
                 <h2>Milica Aleksic</h2>
                 <h5>Ekonomista</h5>
                 <p>Brzi i efikasni!</p>
@@ -222,7 +222,7 @@
                 </div>
             </article>
             <article class="team-member">
-                <img src="img/kupci/kupac_1_.jpg" alt="img">
+                <img src="img/kupci/persona_2.jpg" alt="img">
                 <h2>Marija Maric</h2>
                 <h5>Knjigovodja</h5>
                 <p>Kooperativni i profesionalni!</p>
@@ -231,7 +231,7 @@
                 </div>
             </article>
             <article class="team-member">
-                <img src="img/kupci/kupac_1_.jpg" alt="img">
+                <img src="img/kupci/person_2.jpg" alt="img">
                 <h2>Milos Nikolic</h2>
                 <h5>Frizer</h5>
                 <p>Hvala na prelepoj dekoraciji!</p>
