--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             </div>
             <ul class="nav-links">
                 <li><a href="#banner">Pocetna</a></li>
-                <li><a href="#current">Dekoracije</a></li>
+                <li><a href="#current">ideje</a></li>
                 <li><a href="#about">O nama</a></li>
-                <li><a href="#work">Kupi</a></li>
+                <li><a href="#work">proizvodi</a></li>
                 <li><a href="#team">Drugi o nama</a></li>
                 <li><a href="#contact">Kontakt</a></li>
                 <li class="nav-icons">
@@ -49,8 +49,8 @@
             <div class="banner-text">
                 <h1>sale <span id="ban">baloni</span></h1>
                 <h3>prodaja balona <span>i</span> dekoracija veselja</h3>
-                <a href="#current">istrazi</a>
-                <a href="#work">kupi</a>
+                <a href="#current">ideje</a>
+                <a href="#work">istrazi</a>
             </div>
         </div>
     </header>
@@ -91,6 +91,8 @@
                     <button class="srt-btn" data-filter="sfoli">srca folija 18"</button>
                     <button class="srt-btn" data-filter="lpastel">lateks pastelni 5",10",12" i 19"</button>
                     <button class="srt-btn" data-filter="access">dodatna oprema</button>
+                    <button class="srt-btn" data-filter="dekor">dekoracije</button>
+                    <button class="srt-btn" data-filter="stamp">stampa</button>
                 </div>
             </div>
             <h1 class="dataLoader" data-text="Izaberite zeljenu grupu...">Izaberite zeljenu grupu...</h1>
