--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <button class="srt-btn" data-filter="lpastel">lateks pastelni 5",10",12" i 19"</button>
                     <button class="srt-btn" data-filter="access">dodatna oprema</button>
                     <button class="srt-btn" data-filter="dekor">dekoracije</button>
-                    <button class="srt-btn" data-filter="stamp">stampa</button>
+                    <button class="srt-btn" data-filter="stam">stampa</button>
                 </div>
             </div>
             <h1 class="dataLoader" data-text="Izaberite zeljenu grupu...">Izaberite zeljenu grupu...</h1>
