--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 <i class="fas fa-bars" id="toggle-btn"></i>
             </div>
             <ul class="nav-links">
-                <li><a href="#banner">Pocetna</a></li>
-                <li><a href="#current">ideje</a></li>
-                <li><a href="#about">O nama</a></li>
-                <li><a href="#work">proizvodi</a></li>
-                <li><a href="#team">Drugi o nama</a></li>
-                <li><a href="#contact">Kontakt</a></li>
+                <li><a href="#banner" id="nav-links-i">Pocetna</a></li>
+                <li><a href="#current" id="nav-links-ii">ideje</a></li>
+                <li><a href="#about" id="nav-links-iii">O nama</a></li>
+                <li><a href="#work" id="nav-links-iv">proizvodi</a></li>
+                <li><a href="#team" id="nav-links-v">Drugi o nama</a></li>
+                <li><a href="#contact" id="nav-links-vi">Kontakt</a></li>
                 <li class="nav-icons">
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -47,7 +47,8 @@
         </nav>
         <div id="banner">
             <div class="banner-text">
-                <h1>sale <span id="ban">baloni</span></h1>
+                <h1>sa<span id="le">le</span> <span id="ba">ba</span><span id="lo">lo</span><span id="ni">ni</span></h1>
+                <div class="banner-line"></div>
                 <h3>prodaja balona <span>i</span> dekoracija veselja</h3>
                 <a href="#current">ideje</a>
                 <a href="#work">istrazi</a>
@@ -60,10 +61,9 @@
         <a href="#work"><i class="fas fa-palette"></i></a>
         <a href="#about"><i class="fas fa-splotch"></i></a>
         <a href="#current"><i class="fas fa-baby"></i></a>
-    </section>
+    </section>    
 
-
-    <section id="skills">
+    <section id="work">
         <div class="title">
             <div class="title-icon">
                 <i class="fas fa-cogs  "></i>
@@ -74,9 +74,6 @@
 
             </div>
         </div>
-    </section>
-
-    <section id="work">
         <div class="work-center">
             <div class="button-container">
                 <div class="button-group filter-button-group">
