--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header>
         <nav id="nav">
             <div class="nav-logo">
-                <img src="img/Logo.PNG" alt="logo" width="85px" height="85px">
+                <img src="img/Logo_2.png" alt="logo" width="145px" height="85px">
                 <i class="fas fa-bars" id="toggle-btn"></i>
             </div>
             <ul class="nav-links">
@@ -61,7 +61,7 @@
         <a href="#work"><i class="fas fa-palette"></i></a>
         <a href="#about"><i class="fas fa-splotch"></i></a>
         <a href="#current"><i class="fas fa-baby"></i></a>
-    </section>    
+    </section>
 
     <section id="work">
         <div class="title">
@@ -82,7 +82,7 @@
                     <button class="srt-btn" data-filter="fobli">street folija 14" i 28"</button>
                     <button class="srt-btn" data-filter="hrom">hrom baloni</button>
                     <button class="srt-btn" data-filter="lmetali">lateks metalik 5",10",12" i 19"</button>
-                    <button class="srt-btn" data-filter="zfoli">zvezda folija 18"</button>                    
+                    <button class="srt-btn" data-filter="zfoli">zvezda folija 18"</button>
                     <button class="srt-btn" data-filter="stamp">stampani baloni</button>
                     <button class="srt-btn" data-filter="srfoli">street srca folija 18"</button>
                     <button class="srt-btn" data-filter="sfoli">srca folija 18"</button>
@@ -110,10 +110,10 @@
                 <h2 class="title-heading">O nama</h2>
                 <p class="title-subheading">dugogodisnje iskustvo je nasa garancija</p>
             </div>
-        </div>    
-                <div class="typewriter">
-                       <h1>Nase iskustvo i zelja za daljim usavrsavanjem stavljaju nas ispred svih u pogledu robe i usluga....</h1>
-                </div>
+        </div>
+        <div class="typewriter">
+            <h1>Nase iskustvo i zelja za daljim usavrsavanjem stavljaju nas ispred svih u pogledu robe i usluga....</h1>
+        </div>
     </section>
 
     <section id="current">
@@ -206,7 +206,7 @@
                 <img src="img/kupci/person_1.jpg" alt="img">
                 <h2>Petar Zivic</h2>
                 <h5>Inzenjer</h5>
-                <p>Sve pohvale za Vas rad i kreativnost!</p>
+                <p>Sve pohvale za Vas rad!</p>
                 <div class="team-member-footer">
                     <i class="fas fa-thumbs-up"></i>
                 </div>
@@ -224,7 +224,7 @@
                 <img src="img/kupci/persona_2.jpg" alt="img">
                 <h2>Marija Maric</h2>
                 <h5>Knjigovodja</h5>
-                <p>Kooperativni i profesionalni!</p>
+                <p>Kooperativni!</p>
                 <div class="team-member-footer">
                     <i class="fas fa-smile"></i>
                 </div>
@@ -233,7 +233,7 @@
                 <img src="img/kupci/person_2.jpg" alt="img">
                 <h2>Milos Nikolic</h2>
                 <h5>Frizer</h5>
-                <p>Hvala na prelepoj dekoraciji!</p>
+                <p>Hvala!</p>
                 <div class="team-member-footer">
                     <i class="fas fa-thumbs-up"></i>
                 </div>
@@ -255,15 +255,9 @@
         </div>
 
         <div class="section-group">
-            <article class="contact-member">
-                <div class="contact-member-heder">
-                    <h1>Svakog dana</h1>
-                    <h3>od 8h do 23h</h3>
-                </div>
-                <div class="contact-member-footer">
-                    <i class="fas fa-info-circle"></i>
-                </div>
-            </article>
+            <div class="contact-member">
+                <img src="img/Logo_2.png" alt="contact-image" class="contact-image">
+            </div>
             <div class="form">
                 <form method="post" action="mailer.php" class="contact-form">
                     <div class="row">
@@ -345,9 +339,7 @@
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
-
     </footer>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -362,7 +354,5 @@
     <script src="magnific/magnific.js"></script>
     <script src="numscroller-1.0.js"></script>
 
-
 </body>
-
 </html>
