--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <i class="fas fa-image"></i>
             </div>
             <div class="title-text">
-                <h2 class="title-heading">Dekoracije</h2>
+                <h2 class="title-heading">Ideje</h2>
                 <p class="title-subheading">U dogovoru sa vama svaka dekoracija je moguca</p>
             </div>
         </div>
@@ -338,6 +338,7 @@
         <div class="footer-text">
             <h3>Copyright &copy; 2019. Sva prava zadrzana</h3>
         </div>
+        <div class="footer-number"><h1>06<span id="le">53</span> <span id="ba">41</span><span id="lo">58</span> <span id="ni">98</span></h1></div>
         <div class="footer-icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
