--- a/index.html
+++ b/index.html
@@ -322,8 +322,9 @@
                         <div class="col span-1-of-3">
                             <label>&nbsp;</label>
                         </div>
-                        <div class="col span-2-of-3">
+                        <div class="form-button">
                             <input type="submit" value="Posaljite poruku">
+                            <a href="uploads/Porudzbina.pdf"  target="_blank">Primer porudzbine</a>
                         </div>
                     </div>
             </div>
