--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 
             </div>
         </div>
-        
-        <button class="btn-back dataLoaderNone" data-filter="fbro"><i class="fas fa-arrow-circle-left"></i></button>        
+
+        <button class="btn-back dataLoaderNone" data-filter="fbro"><i class="fas fa-arrow-circle-left"></i></button>
         <div class="work-center">
-            
+
             <div class="button-container">
                 <div class="button-group filter-button-group">
                     <!--<button  class = "srt-btn" data-filter = "*">sve</button>-->
@@ -324,7 +324,7 @@
                         </div>
                         <div class="form-button">
                             <input type="submit" value="Posaljite poruku">
-                            <a href="uploads/Porudzbina.pdf"  target="_blank">Primer porudzbine</a>
+                            <a href="uploads/Porudzbina.pdf" target="_blank">Primer porudzbine</a>
                         </div>
                     </div>
             </div>
@@ -339,7 +339,9 @@
         <div class="footer-text">
             <h3>Copyright &copy; 2019. Sva prava zadrzana</h3>
         </div>
-        <div class="footer-number"><h1>06<span id="le">53</span> <span id="ba">41</span><span id="lo">58</span> <span id="ni">98</span></h1></div>
+        <div class="footer-number">
+            <h1>06<span id="le">53</span> <span id="ba">41</span><span id="lo">58</span> <span id="ni">98</span></h1>
+        </div>
         <div class="footer-icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
@@ -360,4 +362,5 @@
     <script src="numscroller-1.0.js"></script>
 
 </body>
+
 </html>
