--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                         </div>
                         <div class="col span-1-of-3 form-attach">
                             <input type="checkbox" name="news" id="news" checked>Da, molim
-                            <input type="file" name="file" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
+                            <input type="file" name="file" accept="application/pdf">
                         </div>                        
                     </div>
                     <div class="row">
@@ -325,7 +325,7 @@
                         </div>
                         <div class="form-button">
                             <input type="submit" value="Posaljite poruku">
-                            <a href="uploads/Porudzbina.xlsx" download="Porudzbina.xlsx">Primer porudzbine</a>
+                            <a href="uploads/Porudzbina.pdf" download>Primer porudzbine</a>
                         </div>
                     </div>
             </div>
