--- a/index.html
+++ b/index.html
@@ -262,15 +262,15 @@
                 <img src="img/Logo_2.png" alt="contact-image" class="contact-image">
             </div>
             <div class="form" id="form">
-                <form method="post" action="mailer.php" class="contact-form">
+                <form method="post" action="send_mail.php" class="contact-form">
                     <div class="row">
 
-                        <?php if($_GET['success'] == 1) {
+                       <!-- <?php if($_GET['success'] == 1) {
                                 echo "<div class=\"form-message success\">Hvala. Vasa poruka je poslata!</div>";
                             }
                             if($_GET['success'] == -1) {
                                 echo "<div class=\"form-message error\"> Upppss! Molim Vas probajte opet!</div>";
-                            } ?
+                            } ?-->
 
                     </div>
                     <div class="row">
