--- a/index.html
+++ b/index.html
@@ -324,9 +324,10 @@
                             <label>&nbsp;</label>
                         </div>
                         <div class="form-button">
-                            <input type="submit" value="Posaljite poruku">
+                            <input type="submit" name="send" value="Posaljite poruku">
                             <a href="uploads/Porudzbina.pdf" download>Primer porudzbine</a>
                         </div>
+                        
                     </div>
             </div>
 
