--- a/thank_you.html
+++ b/thank_you.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<title>Thank You</title>	
+<title>Hvala!</title>	
 
-<h1>Thanks for your feedback!</h1>
-<p>We appreciate that you took the time to send us feedback. Your feedback has been sent to the webmaster.</p>
-<p><a href="feedback_form.html">Back to feedback form</a>.</p>
+<h1>Vas email je uspesno poslat!</h1>
+<p>U najkracem roku cemo odgovoriti na sve Vase zahteve!</p>
+<p><a href="index.html">Vratite se na nas sajt</a>.</p>
