--- a/error_message.html
+++ b/error_message.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<title>Error</title>	
+<title>Greska!</title>	
 
-<h1>Oops!</h1>
-<p>Please ensure you have completed all fields before submitting the form. </p>
-<p>Also ensure that there is only one email address.</p>
-<p><a href="JavaScript:history.go(-1);">Back</a></p>
+<h1>Ups!</h1>
+<p>Molimo Vas proverite da li ste ispravno popunili sva polja. </p>
+<p>Takodje proverite da li ste upisali samo jednu email adresu.</p>
+<p><a href="JavaScript:history.go(-1);">Nazad</a></p>
