--- a/index.html
+++ b/index.html
@@ -291,6 +291,14 @@
                     </div>
                     <div class="row">
                         <div class="col span-1-of-3">
+                            <label for="phone">Telefon</label>
+                        </div>
+                        <div class="col span-2-of-3">
+                           <input type="tel" name="phone" id="phone" placeholder="06X-123-4567" size="12" minlength="11" maxlength="12" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col span-1-of-3">
                             <label for="find-us">Kako ste nas pronasli?</label>
                         </div>
                         <div class="col span-2-of-3">
