--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
             <div class="title-text">
                 <h2 class="title-heading">Nasa ponuda</h2>
-                <p class="title-subheading">kontaktirajte nas lako cemo se dogovoriti</p>
+                <p class="title-subheading">Stalni lager lateks, folija balona kao i pratece opreme.</p>
 
             </div>
         </div>
@@ -115,7 +115,7 @@
             </div>
         </div>
         <div class="typewriter">
-            <h1>Nase iskustvo i zelja za daljim usavrsavanjem stavljaju nas ispred svih u pogledu robe i usluga....</h1>
+            <h1>Pre dvadeset godina smo krenuli kao skromni dekorateri, stalnim traganjem za najkvalitetnijim i najprihvatljivijim proizvodima za nase trziste  smo izrasli u lidera u regionu sto se tice distribucije  i opreme za rad sa balonima. Tokom svih ovih godina smo se trudili da na nase trziste dovedemo vodece proizvodjace balona kao sto su Gemar, Grabo i Flexmetal. Nas najveci uspeh su stotine obucenih i osamostaljenih dekoratera koji samostalno rade sirom regiona.....</h1>
         </div>
     </section>
 
@@ -126,7 +126,7 @@
             </div>
             <div class="title-text">
                 <h2 class="title-heading">Ideje</h2>
-                <p class="title-subheading">U dogovoru sa vama svaka dekoracija je moguca</p>
+                <p class="title-subheading">Vase je da izaberete temu dekoracije, nase je da vasu ideju sprovedemo u delo.</p>
             </div>
         </div>
 
