--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
     <footer>
         <div class="footer-text">
-            <h3>Copyright &copy; 2019. Sva prava zadrzana</h3>
+            <a href = "mailto: ivan.todorovic.m@gmail.com"><h3>Copyright &copy; 2019. Sva prava zadrzana</h3></a>
         </div>
         <div class="footer-number">
             <h1>06<span id="le">53</span> <span id="ba">41</span><span id="lo">58</span> <span id="ni">98</span></h1>
