--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </div>
         <div id="team-center">
             <article class="team-member">
-                <img src="img/kupci/person_1.jpg" alt="img">
+                <img src="img/kupci/Men_1.jpg" alt="img">
                 <h2>Petar Zivic</h2>
                 <h5>Inzenjer</h5>
                 <p>Sve pohvale za Vas rad!</p>
@@ -215,7 +215,7 @@
                 </div>
             </article>
             <article class="team-member">
-                <img src="img/kupci/persona_1.jpg" alt="img">
+                <img src="img/kupci/Girl_1.jpg" alt="img">
                 <h2>Milica Aleksic</h2>
                 <h5>Ekonomista</h5>
                 <p>Brzi i efikasni!</p>
@@ -224,7 +224,7 @@
                 </div>
             </article>
             <article class="team-member">
-                <img src="img/kupci/persona_2.jpg" alt="img">
+                <img src="img/kupci/Girl_2.jpg" alt="img">
                 <h2>Marija Maric</h2>
                 <h5>Knjigovodja</h5>
                 <p>Kooperativni!</p>
@@ -233,8 +233,8 @@
                 </div>
             </article>
             <article class="team-member">
-                <img src="img/kupci/person_2.jpg" alt="img">
-                <h2>Milos Nikolic</h2>
+                <img src="img/kupci/Girl_3.jpg" alt="img">
+                <h2>Sandra Nikolic</h2>
                 <h5>Frizer</h5>
                 <p>Hvala!</p>
                 <div class="team-member-footer">
