--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="7.1 Grid.css">
     <!--<link rel  = "stylesheet" href = "https://icons8.com/icon/stEibDUxUgR1/party-balloons">-->
-    <link rel="icon" type="image/png" href="https://img.icons8.com/officel/80/000000/party-baloons.png" />
+    <link rel="icon" type="image/png" href="img/Logo.PNG">
     <link rel="stylesheet" href="magnific/magnific-popup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
@@ -40,8 +40,8 @@
                 <li><a href="#team" id="nav-links-v">Drugi o nama</a></li>
                 <li><a href="#contact" id="nav-links-vi">Kontakt</a></li>
                 <li class="nav-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/sasa.rancic.79" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://instagram.com/sale.baloni?igshid=12ucvcy7knkc1" target="_blank"><i class="fab fa-instagram"></i></a>
                 </li>
             </ul>
         </nav>
@@ -115,7 +115,10 @@
             </div>
         </div>
         <div class="typewriter">
-            <h1>Pre dvadeset godina smo krenuli kao skromni dekorateri, stalnim traganjem za najkvalitetnijim i najprihvatljivijim proizvodima za nase trziste  smo izrasli u lidera u regionu sto se tice distribucije  i opreme za rad sa balonima. Tokom svih ovih godina smo se trudili da na nase trziste dovedemo vodece proizvodjace balona kao sto su Gemar, Grabo i Flexmetal. Nas najveci uspeh su stotine obucenih i osamostaljenih dekoratera koji samostalno rade sirom regiona.....</h1>
+            <p>Pre dvadeset godina smo krenuli kao skromni dekorateri, stalnim traganjem za najkvalitetnijim i najprihvatljivijim proizvodima za nase trziste.<br/><br/> 
+               Izrasli smo u lidera regiona sto se tice distribucije i opreme za rad sa balonima.<br/><br/>  
+               Tokom svih ovih godina smo se trudili da na nase trziste dovedemo vodece proizvodjace balona kao sto su Gemar, Grabo i Flexmetal.<br/><br/>   
+               Nas najveci uspeh su stotine obucenih i osamostaljenih dekoratera koji rade sirom regiona...</p>             
         </div>
     </section>
 
@@ -354,8 +357,8 @@
             <h1>06<span id="le">53</span> <span id="ba">41</span><span id="lo">58</span> <span id="ni">98</span></h1>
         </div>
         <div class="footer-icons">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/sasa.rancic.79" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://instagram.com/sale.baloni?igshid=12ucvcy7knkc1" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </footer>
 
