--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="banner-text">
                 <h1>sa<span id="le">le</span> <span id="ba">ba</span><span id="lo">lo</span><span id="ni">ni</span></h1>
                 <div class="banner-line"></div>
-                <h3>prodaja balona <span>i</span> dekoracija veselja</h3>
+                <h3>prodaja balona  <span> &amp; </span>  dekoracija veselja</h3>
                 <a href="#current">ideje</a>
                 <a href="#work">istrazi</a>
             </div>
@@ -349,7 +349,7 @@
 
 
 
-    <footer>
+    <section class="footer">
         <div class="footer-text">
             <a href = "mailto: ivan.todorovic.m@gmail.com"><h3>Copyright &copy; 2019. Sva prava zadrzana</h3></a>
         </div>
@@ -360,7 +360,7 @@
             <a href="https://www.facebook.com/sasa.rancic.79" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://instagram.com/sale.baloni?igshid=12ucvcy7knkc1" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
-    </footer>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
