--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Sale Baloni, Sale Dekoracija, Dekoracija, Baloni, Slavlja">
+    <meta name="description" content="Sale Baloni, Sale Dekoracija, Dekoracija, Baloni, Slavlja, Sale Zaječar">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
-    <meta name="author" content="Ivan Todorovic">
+    <meta name="author" content="Ivan Todorović">
     <title>SaleBaloni</title>
     <script src="https://kit.fontawesome.com/06b0f55414.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Roboto&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
                 <i class="fas fa-bars" id="toggle-btn"></i>
             </div>
             <ul class="nav-links">
-                <li><a href="#banner" id="nav-links-i">Pocetna</a></li>
+                <li><a href="#banner" id="nav-links-i">Početna</a></li>
                 <li><a href="#current" id="nav-links-ii">ideje</a></li>
                 <li><a href="#about" id="nav-links-iii">O nama</a></li>
                 <li><a href="#work" id="nav-links-iv">proizvodi</a></li>
@@ -41,7 +41,7 @@
                 <li><a href="#contact" id="nav-links-vi">Kontakt</a></li>
                 <li class="nav-icons">
                     <a href="https://www.facebook.com/sasa.rancic.79" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://instagram.com/sale.baloni?igshid=12ucvcy7knkc1" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://instagram.com/cati.smajicee?igshid=1jgvopf1ot4tk" target="_blank"><i class="fab fa-instagram"></i></a>
                 </li>
             </ul>
         </nav>
@@ -51,7 +51,7 @@
                 <div class="banner-line"></div>
                 <h3>prodaja balona  <span> &amp; </span>  dekoracija veselja</h3>
                 <a href="#current">ideje</a>
-                <a href="#work">istrazi</a>
+                <a href="#work">istraži</a>
             </div>
         </div>
     </header>
@@ -69,8 +69,8 @@
                 <i class="fas fa-cogs  "></i>
             </div>
             <div class="title-text">
-                <h2 class="title-heading">Nasa ponuda</h2>
-                <p class="title-subheading">Stalni lager lateks, folija balona kao i pratece opreme.</p>
+                <h2 class="title-heading">Naša ponuda</h2>
+                <p class="title-subheading">Stalni lager lateks, folija balona kao i prateće opreme.</p>
 
             </div>
         </div>
@@ -86,16 +86,16 @@
                     <button class="srt-btn" data-filter="hrom">hrom baloni</button>
                     <button class="srt-btn" data-filter="lmetali">lateks metalik 5",10",12" i 19"</button>
                     <button class="srt-btn" data-filter="zfoli">zvezda folija 18"</button>
-                    <button class="srt-btn" data-filter="stamp">stampani baloni</button>
+                    <button class="srt-btn" data-filter="stamp">štampani baloni</button>
                     <button class="srt-btn" data-filter="srfoli">street srca folija 18"</button>
                     <button class="srt-btn" data-filter="sfoli">srca folija 18"</button>
                     <button class="srt-btn" data-filter="lpastel">lateks pastelni 5",10",12" i 19"</button>
                     <button class="srt-btn" data-filter="access">dodatna oprema</button>
                     <button class="srt-btn" data-filter="dekor">dekoracije</button>
-                    <button class="srt-btn" data-filter="stam">stampa</button>
+                    <button class="srt-btn" data-filter="stam">štampa</button>
                 </div>
             </div>
-            <h1 class="dataLoader" data-text="Izaberite zeljenu grupu...">Izaberite zeljenu grupu...</h1>
+            <h1 class="dataLoader" data-text="Izaberite zeljenu grupu...">Izaberite željenu grupu...</h1>
             <div class="picture-container">
 
             </div>
@@ -111,14 +111,14 @@
             </div>
             <div class="title-text">
                 <h2 class="title-heading">O nama</h2>
-                <p class="title-subheading">dugogodisnje iskustvo je nasa garancija</p>
+                <p class="title-subheading">dugogodišnje iskustvo je naša garancija</p>
             </div>
         </div>
         <div class="typewriter">
-            <p>Pre dvadeset godina smo krenuli kao skromni dekorateri, stalnim traganjem za najkvalitetnijim i najprihvatljivijim proizvodima za nase trziste.<br/><br/> 
-               Izrasli smo u lidera regiona sto se tice distribucije i opreme za rad sa balonima.<br/><br/>  
-               Tokom svih ovih godina smo se trudili da na nase trziste dovedemo vodece proizvodjace balona kao sto su Gemar, Grabo i Flexmetal.<br/><br/>   
-               Nas najveci uspeh su stotine obucenih i osamostaljenih dekoratera koji rade sirom regiona...</p>             
+            <p>Pre dvadeset godina smo krenuli kao skromni dekorateri, stalnim traganjem za najkvalitetnijim i najprihvatljivijim proizvodima za naše tržište.<br/><br/> 
+               Izrasli smo u lidera regiona što se tiče distribucije i opreme za rad sa balonima.<br/><br/>  
+               Tokom svih ovih godina smo se trudili da na naše tržište dovedemo vodeće proizvođače balona kao sto su Gemar, Grabo i Flexmetal.<br/><br/>   
+               Naš najveći uspeh su stotine obučenih i osamostaljenih dekoratera koji rade širom regiona...</p>             
         </div>
     </section>
 
@@ -129,7 +129,7 @@
             </div>
             <div class="title-text">
                 <h2 class="title-heading">Ideje</h2>
-                <p class="title-subheading">Vase je da izaberete temu dekoracije, nase je da vasu ideju sprovedemo u delo.</p>
+                <p class="title-subheading">Vaše je da izaberete temu dekoracije, naše je da vašu ideju sprovedemo u delo.</p>
             </div>
         </div>
 
@@ -179,7 +179,7 @@
         </article>
         <article class="number">
             <i class="fas fa-cart-plus">
-                <p class='numscroller' data-min='1' data-max='1000' data-delay='1000' data-increment='1'>1000</p>
+                <p class='numscroller' data-min='1' data-max='1000' data-delay='10000' data-increment='1'>1000</p>
             </i>
             <h3>kupovina</h3>
         </article>
@@ -191,7 +191,7 @@
         </article>
         <article class="number">
             <i class="fas fa-envelope">
-                <p class='numscroller' data-min='1' data-max='1000' data-delay='1000' data-increment='1'>1000</p>
+                <p class='numscroller' data-min='1' data-max='1000' data-delay='10000' data-increment='1'>1000</p>
             </i>
             <h3>Poruka</h3>
         </article>
@@ -204,22 +204,22 @@
             </div>
             <div class="title-text">
                 <h2 class="title-heading">Drugi o nama</h2>
-                <p class="title-subheading">Sta kazu drugi o nama</p>
+                <p class="title-subheading">Šta kažu drugi o nama</p>
             </div>
         </div>
         <div id="team-center">
             <article class="team-member">
                 <img src="img/kupci/Men_1.jpg" alt="img">
-                <h2>Petar Zivic</h2>
-                <h5>Inzenjer</h5>
-                <p>Sve pohvale za Vas rad!</p>
+                <h2>Petar Živić</h2>
+                <h5>Inženjer</h5>
+                <p>Sve pohvale za Vaš rad!</p>
                 <div class="team-member-footer">
                     <i class="fas fa-thumbs-up"></i>
                 </div>
             </article>
             <article class="team-member">
                 <img src="img/kupci/Girl_1.jpg" alt="img">
-                <h2>Milica Aleksic</h2>
+                <h2>Milica Aleksić</h2>
                 <h5>Ekonomista</h5>
                 <p>Brzi i efikasni!</p>
                 <div class="team-member-footer">
@@ -228,8 +228,8 @@
             </article>
             <article class="team-member">
                 <img src="img/kupci/Girl_2.jpg" alt="img">
-                <h2>Marija Maric</h2>
-                <h5>Knjigovodja</h5>
+                <h2>Marija Marić</h2>
+                <h5>Knjigovođa</h5>
                 <p>Kooperativni!</p>
                 <div class="team-member-footer">
                     <i class="fas fa-smile"></i>
@@ -237,7 +237,7 @@
             </article>
             <article class="team-member">
                 <img src="img/kupci/Girl_3.jpg" alt="img">
-                <h2>Sandra Nikolic</h2>
+                <h2>Sandra Nikolić</h2>
                 <h5>Frizer</h5>
                 <p>Hvala!</p>
                 <div class="team-member-footer">
@@ -254,8 +254,8 @@
                     <i class="fas fa-envelope"></i>
                 </div>
                 <div class="title-text">
-                    <h2 class="title-heading">Sa radoscu ocekujemo vas email</h2>
-                    <p class="title-subheading">Email-om mozete poslati spisak proizvoda koji zelite</p>
+                    <h2 class="title-heading">Sa radošću očekujemo vaš email</h2>
+                    <p class="title-subheading">Email-om možete poslati spisak proizvoda koji želite</p>
                 </div>
             </div>
         </div>
@@ -302,7 +302,7 @@
                     </div>
                     <div class="row">
                         <div class="col span-1-of-3">
-                            <label for="find-us">Kako ste nas pronasli?</label>
+                            <label for="find-us">Kako ste nas pronašli?</label>
                         </div>
                         <div class="col span-2-of-3">
                             <select name="find-us" id="find-us">
@@ -315,7 +315,7 @@
                     </div>
                     <div class="row">
                         <div class="col span-1-of-3">
-                            <label for="news">Obavestenja</label>
+                            <label for="news">Obaveštenja</label>
                         </div>
                         <div class="col span-1-of-3 form-attach">
                             <input type="radio" name="news" id="news" value="Da, molim" checked>Da, molim<br>
@@ -325,10 +325,10 @@
                     </div>
                     <div class="row">
                         <div class="col span-1-of-3">
-                            <label for="message">Vasa poruka</label>
+                            <label for="message">Vaša poruka</label>
                         </div>
                         <div class="col span-2-of-3">
-                            <textarea name="message" id="message" cols="30" rows placeholder="Vasa poruka"></textarea>
+                            <textarea name="message" id="message" cols="30" rows placeholder="Vaša poruka"></textarea>
                         </div>                                                
                     </div>
                     <div class="row">
@@ -336,8 +336,8 @@
                             <label>&nbsp;</label>
                         </div>
                         <div class="form-button">
-                            <input type="submit" name="send" value="Posaljite poruku">
-                            <a href="uploads/Porudzbina.pdf" download>Primer porudzbine</a>
+                            <input type="submit" name="send" value="Pošaljite poruku">
+                            <a href="uploads/Porudzbina.pdf" download>Primer porudžbine</a>
                         </div>
                         
                     </div>
@@ -351,14 +351,14 @@
 
     <section class="footer">
         <div class="footer-text">
-            <a href = "mailto: ivan.todorovic.m@gmail.com"><h3>Copyright &copy; 2019. Sva prava zadrzana</h3></a>
+            <a href = "mailto: ivan.todorovic.m@gmail.com"><h3>Copyright &copy; 2019. Sva prava zadržana</h3></a>
         </div>
         <div class="footer-number">
             <h1>06<span id="le">53</span> <span id="ba">41</span><span id="lo">58</span> <span id="ni">98</span></h1>
         </div>
         <div class="footer-icons">
             <a href="https://www.facebook.com/sasa.rancic.79" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://instagram.com/sale.baloni?igshid=12ucvcy7knkc1" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://instagram.com/cati.smajicee?igshid=1jgvopf1ot4tk" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </section>
 
